--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -1,6 +1,6 @@
 <div class="discite__item u-clearfix discite__item--module">
     <div class="discite__main discite__main--module {{ modifier ? `discite__main--${modifier}` : ''}}">
-            {{#if modifier === "search"}} 
+            {{#if modifier === "search"}}
             <a href="/courses/{{course.id}}/{{module.id}}">
                 <h3 class="heading bold-small heading--text">
                     {{module.title}}
@@ -14,11 +14,11 @@
 				<p  class="font-small discite__counter--search">There are {{course.modules.length}} in total.</p>
              </div>
             {{else}}
-            <a href="/courses/{{course.id}}/{{module.id}}">
+
                 <h3 class="heading bold-small heading--text">
                         {{module.title}}
-                    </h3>
-            </a>
+                </h3>
+
             {{/if}}
 
         {{#if module.description}}
@@ -33,14 +33,16 @@
             <li class="discite__property-item">
                 <span class="visuallyhidden">Duration:</span> {{module.duration || ''}}
             </li>
-            <li class="discite__property-item">
-                <span class="visuallyhidden">Cost:</span> &pound;{{module.price || 'Free'}}
-            </li>
+            {{#if module.type !== 'file'}}
+                <li class="discite__property-item">
+                    <span class="visuallyhidden">Cost:</span> &pound;{{module.price || 'Free'}}
+                </li>
+            {{/if}}
         </ul>
         <div class="discite__status"><span class="badge badge--info ">{{module.state ? i18n(module.state) : ''}}</span></div>
     </div>
     <div class="discite__action discite__action--module">
-        {{#if modifier === "search"}} 
+        {{#if modifier === "search"}}
             <a href="/courses/{{course.id}}/{{module.id}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
             {{#if !course.isRequired(signedInUser) }}
                 {{#if !course.record || course.record.state === 'ARCHIVED'}}
@@ -50,7 +52,15 @@
                 {{/if}}
             {{/if}}
         {{else}}
-        <a href="/courses/{{course.id}}/{{module.id}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
+            {{#if module.type === 'elearning'}}
+                <a href="{{module.url}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
+            {{elseif module.type === 'file'}}
+                <a download="{{fileHelpers.fileName(module.url)}}" href="{{module.url}}">
+                    Download document
+                </a> ({{fileHelpers.extension(module.url)}} {{fileHelpers.appropriateFileSize(module.fileSize)}})
+
+            {{/if}}
+
         {{/if}}
     </div>
 </div>
